进一步优化编程模型

--- a/samples/WebDemo/WebContent/views/webservicedemo.html
+++ b/samples/WebDemo/WebContent/views/webservicedemo.html
@@ -28,7 +28,7 @@
       <td><a href="../service/presentation/webservice/AdaptiveDataBack/?$dataFormat=json">数据返回格式由请求时决定($dataFormat=xml/json)</a></td>
      </tr>
 	  <tr> 
-      <td><a href="../service/presentation/webservice/BeanDataDemoService/">数据直接以Bean而非Map形式返回</a></td>
+      <td><a href="../service/presentation/webservice/BeanDataDemoService/?id=1000">数据直接以Bean而非Map形式返回</a></td>
      </tr>
   </table>
 <p align="center"><a href="../index.html">返回</a></p>
